Fix width on mobile

--- a/_sass/_image-modal.scss
+++ b/_sass/_image-modal.scss
@@ -20,6 +20,7 @@
     max-height: calc(100vh - 100px - 50px);
     @include mobile {
       width: 100%;
+      max-width: 100%;
     }
   }
 
